# 6nimmts

./: .gitignore  README.md  decorators.py  exceptions.py  gameplay.py  main.py  pyproject.toml  setup.py  simulate.py
.github/: run-checks.sh
.github/workflows/: cherry-pick.yml  merge.yml
6nimmts/: gameplay.py  printing.py  simulate.py  utils.py
misc/: function_lists.txt
tests/: dynamic_screen_update.py  test_6nimmts.py  test_decorators.py
